fix: add black background to eliminate whitespace

--- a/assets/blog_post.css
+++ b/assets/blog_post.css
@@ -46,3 +46,8 @@ article {
 .flow-container {
     justify-content: center;
 }
+
+figure {
+    background-color: black;
+    color: var(--tertiary-color);
+}
